--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Nested Calculation GIF</title>
   </head>
   <body>
-    <img src="C:\Users\Erica Hughes\Desktop" />
+    <img src="C:\Users\Erica Hughes\Desktop" alt="Nested Calculation GIF" />
   </body>
 </html>
