Update image src to GIF link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Nested Calculation GIF</title>
   </head>
   <body>
-    <img src="C:\Users\Erica Hughes\Desktop" alt="Nested Calculation GIF" />
+    <img src="https://imgur.com/a/Wa8L5jn" alt="Nested Calculation GIF" />
   </body>
 </html>
