--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Nested Calculation GIF</title>
   </head>
   <body>
-    <img src="https://imgur.com/a/Wa8L5jn" alt="Nested Calculation GIF" />
+    <img
+      src="C:\Users\Erica Hughes\Desktop\ejhughes-github.io"
+      alt="Nested Calculation GIF"
+    />
     <!--<blockquote class="imgur-embed-pub" lang="en" data-id="a/Wa8L5jn">
       <a href="//imgur.com/a/Wa8L5jn">Tableau Nested Calculation</a>
     </blockquote>
