--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img
-      src="C:\Users\Erica Hughes\Desktop\ejhughes-github.io"
+      src="C:\Users\Erica Hughes\Desktop\ejhughes.github.io\Nested Calculation.gif"
       alt="Nested Calculation GIF"
     />
     <!--<blockquote class="imgur-embed-pub" lang="en" data-id="a/Wa8L5jn">
