--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Nested Calculation GIF</title>
   </head>
   <body>
-    <img
+    <a href="https://photos.app.goo.gl/VbpyRis5bPW7uVvt7"></a>
+    <!--<img
       src="C:\Users\Erica Hughes\Desktop\ejhughes.github.io\Nested Calculation.gif"
       alt="Nested Calculation GIF"
     />
-    <!--<blockquote class="imgur-embed-pub" lang="en" data-id="a/Wa8L5jn">
+   <blockquote class="imgur-embed-pub" lang="en" data-id="a/Wa8L5jn">
       <a href="//imgur.com/a/Wa8L5jn">Tableau Nested Calculation</a>
     </blockquote>
     <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>-->
