--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Nested Calculation GIF</title>
   </head>
   <body>
-    <a href="https://photos.app.goo.gl/VbpyRis5bPW7uVvt7"></a>
+    <a
+      href="https://lh3.googleusercontent.com/Sa3ebIUMzvMpnNqZ-pTfsSZhh2mnTWCQ_uuU6AkcYecNkjWw7rixWrxj2sTFUlI9dYz3unswYkCFgIpPt--1t_pOBLg4vYLImHNzKrTB16OMLMCMWuL1b2lhoIiIJLtFPyLh574W=w2400?source=screenshot.guru"
+    >
+      <img
+        src="https://lh3.googleusercontent.com/Sa3ebIUMzvMpnNqZ-pTfsSZhh2mnTWCQ_uuU6AkcYecNkjWw7rixWrxj2sTFUlI9dYz3unswYkCFgIpPt--1t_pOBLg4vYLImHNzKrTB16OMLMCMWuL1b2lhoIiIJLtFPyLh574W=w346-h315-p-k"
+      />
+    </a>
     <!--<img
       src="C:\Users\Erica Hughes\Desktop\ejhughes.github.io\Nested Calculation.gif"
       alt="Nested Calculation GIF"
